Cleanup a bit
_ Simplify
_ Fix typo
_ Code style
_ Do not hide exceptions